Tests/RunCMake/CMakePresets/InvalidRoot-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidRoot:
Error: \@1\,1\: Invalid root object
\[\]
\^$
